# Notez-Tauri

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  requirements.txt  run_build.sh  tailwind.config.ts  tsconfig.json
.github/workflows/: app.yml
app/: config.tsx  error.tsx  globals.css  layout.tsx  page.tsx
app/api/: clients.tsx  db.tsx  embs.tsx  llms.tsx  prompts.tsx  route.tsx  utils.tsx
app/api/file/delete/: route.tsx
app/api/file/deleteSession/: route.tsx
app/api/file/upload/: route.tsx
app/api/llm/: route.tsx  streamReturn.tsx
app/api/llm/base/: route.tsx
app/api/rag/emb/: route.tsx
app/api/rag/fileSearch/: route.tsx
app/api/rag/split/: route.tsx
src-api/: main.py  run.sh
src-api/conf/: __init__.py  config.py
src-api/file/: __init__.py  file_route.py
src-api/llm/: __init__.py  llm_prompt.py  llm_route.py
src-api/models/: __init__.py  file_model.py  llm_model.py
src-api/rag/: __init__.py  rag_route.py
src-api/utils/: __init__.py  clients.py  db.py  log_tool.py  tools.py
src-node/: package-lock.json  package.json
src-node/src/: index.ts
src-node/src/routes/: api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sidecar_lifecycle_service.rs
store/: apiStore.tsx  mdStore.tsx  ragStore.tsx
utils/fetchs/: base.tsx  llm.tsx
