[package]
name = "notez"
version = "0.1.0"
description = "A AI Markdown App"
authors = ["you"]
license = ""
repository = ""
default-run = "notez"
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
command-group = "2.1.0"
serde_json = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = [
    "devtools",
    "shell-all",
    "path-all",
    "window-all",
    "fs-all",
    "http-all",
    "process-command-api",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
